// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Footer should render correctly 1`] = `
"<div class=\\"card  \\"><div class=\\"content \\"><p>card</p><style>
        .content {
          width: 100%;
          padding: 16pt 16pt;
        }
        .content > :global(*:first-child) {
          margin-top: 0;
        }
        .content > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></div><footer class=\\"auto-margin \\">footer<style>
        footer {
          padding: 8pt 16pt;
          display: flex;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 0.875rem;
          border-top: 1px solid #eaeaea;
          border-bottom-left-radius: 14px;
          border-bottom-right-radius: 14px;
          min-height: calc(2.5 * 16pt);
        }
        .auto-margin :global(*) {
          margin-top: 0;
          margin-bottom: 0;
          margin-right: 4pt;
        }
      </style></footer><style>
        .card {
          background: #fff;
          margin: 0;
          padding: 0;
          width: 100%;
          transition: all 0.25s ease;
          border-radius: 14px;
          box-shadow: none;
          box-sizing: border-box;
          color: #000;
          background-color: #f6f6f6;
          border: 0px solid transparent;
        }
        .card:hover {
          box-shadow: none;
        }
        .card :global(img) {
          width: 100%;
        }
        .card.animated :global(img) {
          transition: all 0.25s ease;
        }
        .card.animated:hover :global(img) {
          transform: scale(1.15);
        }
        .card :global(.image) {
          border-bottom-left-radius: 0;
          border-bottom-right-radius: 0;
        }
      </style></div>"
`;

exports[`Card Footer should work with disable-auto-margin 1`] = `
"<footer class=\\" \\">footer<style>
        footer {
          padding: 8pt 16pt;
          display: flex;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 0.875rem;
          border-top: 1px solid #eaeaea;
          border-bottom-left-radius: 14px;
          border-bottom-right-radius: 14px;
          min-height: calc(2.5 * 16pt);
        }
        .auto-margin :global(*) {
          margin-top: 0;
          margin-bottom: 0;
          margin-right: 4pt;
        }
      </style></footer>"
`;
